feat : 로고 및 파비콘 추가

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="kr">
 <head>
     <meta charset="UTF-8"/>
-    <link href="/vite.svg" rel="icon" type="image/svg+xml"/>
+    <link href="/gream-favicon.png" rel="icon" type="image/pmg"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Gream</title>
 </head>
